[tool.poetry]
name = "sketch2img"
version = "0.1.0"
description = ""
authors = ["IzumiSatoshi <izumisatoshi05@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    {include = "src"},
]


[tool.poetry.dependencies]
python = "^3.10"
torch = {url="https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp310-cp310-win_amd64.whl"}
torchvision = {url="https://download.pytorch.org/whl/cu117/torchvision-0.14.0%2Bcu117-cp310-cp310-win_amd64.whl"}
matplotlib = "^3.6.2"
opencv-python = "^4.7.0.68"
diffusers = "^0.11.1"
accelerate = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
